cors config updated